# integer-programming

./: .gitignore  Makefile  README.md  pyproject.toml
intprog/: branch_and_bound.py  cutting_plane.py  data_classes.py  solvers.py  utils.py
tests/: problems.py  test_branch_and_bound.py  test_cutting_plane.py
