[tool.poetry]
name = "intprog"
version = "0.1.0"
description = "algorithms for integer programming"
authors = ["Andrew Muth <agmuth@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
linprog = {git = "https://github.com/agmuth/linear-programming.git"}
sortedcontainers = "^2.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.282"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120  # defaults to 88 like black
